# ace

./: .clang-format  .dockerignore  .gitignore  .lldb-script  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  a.out  ace-link-to-src  ace-tags  ace.1  assert.h  ast.cpp  ast.h  ast_decls.h  atom.cpp  atom.h  bound_type.cpp  bound_type.h  bound_var.cpp  bound_var.h  build-tags.sh  builtins.cpp  builtins.h  callable.cpp  callable.h  camelize.c  cider-link-to-src  cider-tags  cider.1  code_id.h  coercions.cpp  coercions.h  (+133 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  main.yml
apps/: logit.zion  tee.zion
bench/: fib-mem.cider  fib.zion
future/: test_link.zion  test_match.zion  test_sum_type_variable_fail.zion  test_type_exprs.zion
lib/: C.zion  C99.zion  SDL.zion  a.zion  append.zion  argparse.zion  argparser.ace  argparser.zion  b.zion  backtrack.ace  backtrack.zion  bool.zion  buffer.zion  bufio.cider  bufio.zion  builtins.zion  bytes.zion  c.zion  char.zion  color.zion  complex.zion  container.zion  copy.cider  copy.zion  crypto.zion  csv.zion  defaults.ace  defaults.zion  dict.zion  either.zion  eq.zion  file.zion  filesize.zion  float.zion  functional.zion  functor.zion  geometry.zion  hash.ace  hash.cider  hash.zion  (+67 more)
play/: active_record.cider  active_record.zion  ambiguous.zion  b.zion  bare.zion  bool.cider  bool.zion  cap.zion  conway.ace  conway.cider  conway.zion  csv.zion  deduce.zion  fib_closure.zion  g.cider  generics.cider  generics.zion  hashing.zion  hello.ace  if_var.cider  if_var.zion  lisp.ace  lisp.zion  map_test.zion  ml.zion  nested_list.cider  nested_list.zion  net  net.cider  parse.zion  patterns.zion  raw_main.zion  resolution.cider  resolution.zion  simple.zion  tree_test.cider  tree_test.zion  types.zion  write_file.zion
runtime/: ace_rt.c  ace_sodium.c  cider_rt.c  cider_sodium.c  zion_rt.c  zion_sodium.c
src/: ace.h  ace_assert.h  ast.cpp  ast.h  ast_decls.h  atom.cpp  atom.h  binding.cpp  binding.h  bitter.cpp  bitter.h  bound_type.cpp  bound_type.h  bound_var.cpp  bound_var.h  builtins.cpp  builtins.h  callable.cpp  callable.h  checked.cpp  checked.h  checked_var.cpp  checked_var.h  cider.h  cider_assert.h  class_predicate.cpp  class_predicate.h  code_id.h  coercions.cpp  coercions.h  colors.h  compiler.cpp  compiler.h  constraint.cpp  constraint.h  context.cpp  context.h  data_ctors_map.cpp  data_ctors_map.h  dbg.cpp  (+147 more)
tests/: __test_linked_module.zion  assert.zion  broken_test_inner_func.zion  broken_test_literals.zion  broken_test_logic.zion  broken_test_suite.zion  broken_test_syntax.zion  capture.zion  climb.zion  compute-four.zion  eightq.zion  expect-fail.sh  expect-pass-no-prelude.sh  expect-pass.sh  ferber.zion  fizzbuzz.zion  hello_int.zion  mumford.zion  questions.zion  run-test.sh  run-tests.sh  test-assert-fail.sh  test_a.zion  test_accidental_newtype_variables.cider  test_accidental_struct_variables.ace  test_accidental_type_variables.zion  test_added_ir.zion  test_all_unification_errors.cider  test_and_01.zion  test_and_02.zion  test_and_03.zion  test_and_04.zion  test_and_conditional_refinement.zion  test_anonymous_any_arg.zion  test_anonymous_any_return.zion  test_anonymous_any_return_01.zion  test_anonymous_any_return_02.zion  test_anonymous_as_arg.zion  test_append_vector.zion  test_arg_parser.zion  (+495 more)
tests/circular_exports/: moon1.cider  moon1.zion  moon2.zion  test_circular_exports.cider  test_circular_exports.zion
tests/destructuring/: test_filtered_matching.cider
tests/list/: test_remove_if.ace  test_remove_if.zion
tests/map/: test_insertion.cider  test_insertion.zion  test_keys.cider  test_map_generators.zion  test_map_iter.ace  test_random_insertions.zion  test_string_key.ace  test_string_key.zion  test_values.cider
tests/match/: test_name_assignment.cider
tests/net/: test_socket.cider
tests/set/: test_set_insertion.cider  test_set_insertion.zion  test_set_iter.zion  test_set_vector.cider
tests/string/: test_has_substring_at.cider  test_replace.zion  test_split.cider  test_split.zion  test_strip.zion
tests/strings/: test_eof_within.ace  test_eof_within.zion  test_eof_within_string_expr.ace  test_join_in_string_expr.cider  test_join_in_string_expr.zion  test_join_multiple_strings.zion  test_var_ref.zion
tests/sys/: test_open_string.ace  test_open_string.zion
utf8/utf8/: checked.h
